--- a/WordleWordRecommend/WordleWordRecommend.csproj
+++ b/WordleWordRecommend/WordleWordRecommend.csproj
@@ -101,5 +101,8 @@
     <Folder Include="ViewModels\" />
     <Folder Include="Views\" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="wordleWhite.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
