--- a/WordleWordRecommend/WordleWordRecommend.csproj
+++ b/WordleWordRecommend/WordleWordRecommend.csproj
@@ -56,6 +56,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="ViewModels\BaseViewModel.cs" />
+    <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="Views\WordRecommendView.xaml.cs">
       <DependentUpon>WordRecommendView.xaml</DependentUpon>
     </Compile>
